--- a/quoraBlog/templates/index.html
+++ b/quoraBlog/templates/index.html
@@ -42,7 +42,7 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href=#>Home</a></li>
+          <li class="active"><a href="{% url 'home' %}">Home</a></li>
           {% if user.is_authenticated %}
             <li><a href="{% url 'profile' %}">Profile</a></li>
             <li><a href="{% url 'blogs' %}">Blogs</a></li>
@@ -65,7 +65,6 @@
     <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
       <h1>Somaiya Quora</h1>
       <h2>Get all your doubts and queries cleared!</h2>
-      <a href="courses.html" class="btn-get-started">Add Community</a>
     </div>
   </section><!-- End Hero -->
 
@@ -78,13 +77,11 @@
         <div class="row">
           <div class="col-lg-4 d-flex align-items-stretch">
             <div class="content">
-              <h3>Why join Somaiya Quora communities?</h3>
+              <h3>Why use Somaiya Quora communities?</h3>
               <p>
-                Connect with peers and faculties from all the branches and get uout doubts cleared!
+                Connect with peers and faculties from all the branches and get your doubts cleared!
               </p>
-              <div class="text-center">
-                <a href="about.html" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
-              </div>
+              
             </div>
           </div>
           <div class="col-lg-8 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
@@ -94,21 +91,21 @@
                   <div class="icon-box mt-4 mt-xl-0">
                     <i class="bx bx-receipt"></i>
                     <h4>Computer Engineering</h4>
-                    <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                    <p>Welcome to the department of Computer Engineering, the most sought after field in Engineering!</p>
                   </div>
                 </div>
                 <div class="col-xl-4 d-flex align-items-stretch">
                   <div class="icon-box mt-4 mt-xl-0">
                     <i class="bx bx-cube-alt"></i>
                     <h4>Information Technology</h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                    <p>Getting up there toe to toe with Computer Engineering is another tech specific field, Information Technology.</p>
                   </div>
                 </div>
                 <div class="col-xl-4 d-flex align-items-stretch">
                   <div class="icon-box mt-4 mt-xl-0">
                     <i class="bx bx-images"></i>
-                    <h4>Mechanical</h4>
-                    <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                    <h4>Mechanical Engineering</h4>
+                    <p>The good old fashioned science of machines and how things work!</p>
                   </div>
                 </div>
               </div>
@@ -159,17 +156,17 @@
             Ghatkopar, Mumbai<br>
             Maharashtra <br><br>
             <strong>Phone:</strong> +1 5589 55488 55<br>
-            <strong>Email:</strong> info@example.com<br>
+            <strong>Email:</strong> abc@somaiya.edu<br>
           </p>
         </div>
 
         <div class="col-lg-2 col-md-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Profile</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Blogs</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Logout</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'home' %}">Home</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'profile' %}">Profile</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'blogs' %}">Blogs</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'logout' %}">Logout</a></li>
           </ul>
         </div>
 
