--- a/quoraBlog/templates/txt_sum.html
+++ b/quoraBlog/templates/txt_sum.html
@@ -71,7 +71,7 @@
     <div class="box">
 
     </div>
-    <br><br>
+    <br>
     <div style="text-align: center;">
         Please input your text here
     </div>
@@ -79,28 +79,94 @@
    
     <form action="/txt_sum/" method="post">
       {% csrf_token %}
-      <div type="text" id="name" name="name" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%,-50%);">
+      <center>
+      <div type="text" id="name" name="name" ">
         {{form.input1}}
-      </div><br>
+      </div>
+      </center><br>
      
       <div>
 
-        <input type="submit" style="position: fixed; top: 70%; left: 50%; transform: translate(-50%,-50%);">
+        <center><input type="submit" style="position: relative;"></center>
 
       </div>
     </form>
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br>
     <div style="text-align: center;">
       Your summarised text is:
     </div>
-    <br><br>
+    <br>
     <div style="text-align: center;">
       {{summary}} 
     </div>
      
     <br><br><br><br><br><br><br>
 </main>
+
+<!-- ======= Footer ======= -->
+<footer id="footer">
+
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-lg-3 col-md-6 footer-contact">
+          <h3>Somiya Quora</h3>
+          <p>
+            KJ Somaiya College of Engineering <br>
+            Ghatkopar, Mumbai<br>
+            Maharashtra <br><br>
+            <strong>Phone:</strong> +1 5589 55488 55<br>
+            <strong>Email:</strong> abc@somaiya.edu<br>
+          </p>
+        </div>
+
+        <div class="col-lg-2 col-md-6 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'home' %}">Home</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'profile' %}">Profile</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'blogs' %}">Blogs</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'logout' %}">Logout</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-3 col-md-6 footer-links">
+          <h4>Our Communities</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Computer</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Information Technology</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Electronics</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Electronics and Tele Communications</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Mechanical</a></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="container d-md-flex py-4">
+
+    <div class="mr-md-auto text-center text-md-left">
+      <div class="copyright">
+      
+      </div>
+      <div class="credits">
+       
+      </div>
+    </div>
+    <div class="social-links text-center text-md-right pt-3 pt-md-0">
+      <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+      <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+      <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+      <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+      <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+    </div>
+  </div>
+</footer><!-- End Footer -->
+
 
 <!--<footer id="footer">
 
