--- a/quoraBlog/templates/blogs.html
+++ b/quoraBlog/templates/blogs.html
@@ -63,7 +63,7 @@
     <div class="breadcrumbs">
       <div class="container">
         <h2>Blogs</h2>
-        <p>The blogs relevant to this community! </p>
+        <p>Blogs of All Communities</p>
       </div>
     </div><!-- End Breadcrumbs -->
 
@@ -72,6 +72,21 @@
       <div class="container" data-aos="fade-up">
 
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
+          {% for comm in commList %}
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="course-item" style="margin-bottom: 12px;">
+              <a href={{comm}}>
+                <img src="{% static 'img/course-1.jpg' %}" class="img-fluid" alt="...">
+              <div class="course-content">
+                  <h4>{{ comm }}</h4>
+              </div>
+              </a>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+
+        <!-- <div class="row" data-aos="zoom-in" data-aos-delay="100">
           {% for post in allPosts %}
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="course-item" style="margin-bottom: 12px;">
@@ -98,90 +113,7 @@
             </div>
           </div>
           {% endfor %}
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="course-item">
-              <img src="{% static 'img/course-1.jpg' %}" class="img-fluid" alt="...">
-              <!-- <img src="assets/img/course-1.jpg" class="img-fluid" alt="..."> -->
-              <div class="course-content">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                  <h4>Computer</h4>
-                </div>
-
-                <h3><a href="course-details.html">Machine learning</a></h3>
-                <p>Machine learning is the study of computer algorithms that improve automatically through experience. It is seen as a part of artificial intelligence.</p>
-                <div class="trainer d-flex justify-content-between align-items-center">
-                  <div class="trainer-profile d-flex align-items-center">
-                    <img src="{% static 'img/trainer-1.jpg' %}" class="img-fluid" alt="...">
-                    <!-- <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt=""> -->
-                    <span>Viraj</span>
-                  </div>
-                  <div class="trainer-rank d-flex align-items-center">
-                    <i class="bx bx-user"></i>&nbsp;50
-                    &nbsp;&nbsp;
-                    <i class="bx bx-heart"></i>&nbsp;65
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> <!-- End Course Item-->
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-            <div class="course-item">
-              <img src="{% static 'img/course-2.jpg' %}" class="img-fluid" alt="...">
-              <!-- <img src="assets/img/course-2.jpg" class="img-fluid" alt="..."> -->
-              <div class="course-content">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                  <h4>Information Technology</h4>
-                </div>
-
-                <h3><a href="course-details.html">Search Engine Optimization</a></h3>
-                <p>Search engine optimization is the process of improving the quality and quantity of website traffic to a website or a web page from search engines. SEO targets unpaid traffic rather than direct traffic or paid traffic.</p>
-                <div class="trainer d-flex justify-content-between align-items-center">
-                  <div class="trainer-profile d-flex align-items-center">
-                    <img src="{% static 'img/trainer-2.jpg' %}" class="img-fluid" alt="...">
-                    <!-- <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid" alt=""> -->
-                    <span>Vartika</span>
-                  </div>
-                  <div class="trainer-rank d-flex align-items-center">
-                    <i class="bx bx-user"></i>&nbsp;35
-                    &nbsp;&nbsp;
-                    <i class="bx bx-heart"></i>&nbsp;42
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> <!-- End Course Item-->
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-            <div class="course-item">
-              <img src="{% static 'img/course-3.jpg' %}" class="img-fluid" alt="...">
-              <!-- <img src="assets/img/course-3.jpg" class="img-fluid" alt="..."> -->
-              <div class="course-content">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                  <h4>Mechanical</h4>
-                </div>
-
-                <h3><a href="course-details.html">Supply Chain</a></h3>
-                <p>A supply chain is the network of all the individuals, organizations, resources, activities and technology involved in the creation and sale of a product. A supply chain encompasses everything from the delivery of source materials from the supplier to the manufacturer through to its eventual delivery to the end user.</p>
-                <div class="trainer d-flex justify-content-between align-items-center">
-                  <div class="trainer-profile d-flex align-items-center">
-                    <img src="{% static 'img/trainer-3.jpg' %}" class="img-fluid" alt="...">
-                    <!-- <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt=""> -->
-                    <span>Aniket</span>
-                  </div>
-                  <div class="trainer-rank d-flex align-items-center">
-                    <i class="bx bx-user"></i>&nbsp;20
-                    &nbsp;&nbsp;
-                    <i class="bx bx-heart"></i>&nbsp;85
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> <!-- End Course Item-->
-
-        </div>
-
+        </div> -->
       </div>
     </section><!-- End Courses Section -->
 
